# visualizadorOBJ

./: CMakeLists.txt  README.md
include/: Geometry.h  Model.h  Render.h  Scene.h  Shader.h  Window.h
include/models/: Grid.h  ImportedModel.h
include/obj_helpers/: ModelImporter.h
shaders/: axis.frag  axis.vert  func.vert  height.frag  height.vert  moving_axis.frag  moving_axis.vert
src/: Geometry.cpp  Main.cpp  Model.cpp  Render.cpp  Scene.cpp  Shader.cpp  Window.cpp
src/models/: Grid.cpp  ImportedModel.cpp
src/obj_helpers/: ModelImporter.cpp
